src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__Assignment at index.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: Assignment at index\n──────────────────────────────────────────────────────────────────────────────────\na[1] = 10"
expression: parse_expr (& source)
info: test_parser_access
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "a",
        },
        file_id: FileId(Anon),
    } = Assign(Index {
        target: Var(IdentId(4))[0:1],
        index: Int(1)[2:3],
    }[1:4] = Int(10)[7:9])[1:9],
)
