src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__Call as expression.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: Call as expression\n──────────────────────────────────────────────────────────────────────────────────\na(1,1,1)+1"
expression: parse_expr (& source)
info: test_parser_calls
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "a",
        },
        file_id: FileId(Anon),
    } = BinaryNode {
        kind: Add,
        left: Call {
            callee: Var(IdentId(4))[0:1],
            args: [
                Int(1)[2:3],
                Int(1)[4:5],
                Int(1)[6:7],
            ],
        }[2:8],
        right: Int(1)[9:10],
    }[2:10],
)
