src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__Call expression.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: Call expression\n──────────────────────────────────────────────────────────────────────────────────\na(102,true,'1')"
expression: parse_expr (& source)
info: test_parser_calls
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "a",
        },
        file_id: FileId(Anon),
    } = Call {
        callee: Var(IdentId(4))[0:1],
        args: [
            Int(102)[2:5],
            true[6:10],
            "1"[11:14],
        ],
    }[2:15],
)
