src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__Chained access with call.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: Chained access with call\n──────────────────────────────────────────────────────────────────────────────────\na.b().c().d().e()"
expression: parse_expr (& source)
info: test_parser_access
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "a",
            5: "b",
            6: "c",
            7: "d",
            8: "e",
        },
        file_id: FileId(Anon),
    } = FieldAccess {
        target: FieldAccess {
            target: FieldAccess {
                target: FieldAccess {
                    target: Var(IdentId(4))[0:1],
                    requested: Method {
                        callee: IdentId(5),
                        callee_span: 2:3,
                        args: [],
                        arg_span: 4:5,
                    }[2:5],
                }[0:5],
                requested: Method {
                    callee: IdentId(6),
                    callee_span: 6:7,
                    args: [],
                    arg_span: 8:9,
                }[6:9],
            }[0:9],
            requested: Method {
                callee: IdentId(7),
                callee_span: 10:11,
                args: [],
                arg_span: 12:13,
            }[10:13],
        }[0:13],
        requested: Method {
            callee: IdentId(8),
            callee_span: 14:15,
            args: [],
            arg_span: 16:17,
        }[14:17],
    }[0:17],
)
