src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__Chained access.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: Chained access\n──────────────────────────────────────────────────────────────────────────────────\na.b.c.d"
expression: parse_expr (& source)
info: test_parser_access
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "a",
            5: "b",
            6: "c",
            7: "d",
        },
        file_id: FileId(Anon),
    } = FieldAccess {
        target: FieldAccess {
            target: FieldAccess {
                target: Var(IdentId(4))[0:1],
                requested: Property(
                    IdentId(5)[2:3],
                )[2:3],
            }[0:3],
            requested: Property(
                IdentId(6)[4:5],
            )[4:5],
        }[0:5],
        requested: Property(
            IdentId(7)[6:7],
        )[6:7],
    }[0:7],
)
