src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__Class constructor.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: Class constructor\n──────────────────────────────────────────────────────────────────────────────────\nclass Foo {};\nlet b = Foo {\n\tx:10,\n\ty:20\n}"
expression: parse_expr (& source)
info: test_parser_classes
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "Foo",
            5: "b",
            6: "x",
            7: "y",
        },
        file_id: FileId(Anon),
    } = [
        ClassLit {
            name: Some(
                IdentId(4)[6:9],
            ),
            fields: {},
            methods: {},
        }[10:12],
        Decl(readonly)::IdentId(5) = Constructor {
            target: Var(IdentId(4))[22:25],
            params: {
                IdentId(7): Int(20)[38:40],
                IdentId(6): Int(10)[31:33],
            },
        }[22:42][14:42],
    ],
)
