src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__Class literal using static function.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: Class literal using static function\n──────────────────────────────────────────────────────────────────────────────────\nclass Foo {\n\tstatic message = \"Well hello there\";\n\tstatic func print_msg() {\n\t\tprintln(Self.message);\n\t}\n\tfunc prompt_with_header(a) {\n\t\tprintln(a);\n\t\tSelf.print_msg();\n\t}\n}"
expression: parse_expr (& source)
info: test_parser_classes
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "Foo",
            5: "message",
            6: "print_msg",
            7: "prompt_with_header",
            8: "a",
        },
        file_id: FileId(Anon),
    } = ClassLit {
        name: Some(
            IdentId(4)[6:9],
        ),
        fields: {
            (
                IdentId(5),
                true,
            ): Field {
                default: Some(
                    "Well hello there"[30:48],
                ),
                readonly: true,
                name_span: 20:27,
                modifier_span: 13:19,
                private: false,
            }[13:49],
        },
        methods: {
            (
                IdentId(6),
                true,
            ): Method {
                block: [
                    Call {
                        callee: Var(IdentId(1))[79:86],
                        args: [
                            FieldAccess {
                                target: SelfTy[87:91],
                                requested: Property(
                                    IdentId(5)[92:99],
                                )[92:99],
                            }[87:99],
                        ],
                    }[87:100],
                ][75:104],
                args: [],
                name_span: 63:72,
                modifier_span: 51:57,
                private: false,
            }[51:110],
            (
                IdentId(7),
                false,
            ): Method {
                block: [
                    Call {
                        callee: Var(IdentId(1))[137:144],
                        args: [
                            Var(IdentId(8))[145:146],
                        ],
                    }[145:147],
                    FieldAccess {
                        target: SelfTy[151:155],
                        requested: Method {
                            callee: IdentId(6),
                            callee_span: 156:165,
                            args: [],
                            arg_span: 166:167,
                        }[156:167],
                    }[151:167],
                ][133:171],
                args: [
                    IdentId(8)[130:131],
                ],
                name_span: 111:129,
                modifier_span: 106:110,
                private: false,
            }[106:173],
        },
    }[10:173],
)
