src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__Class literal with methods.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: Class literal with methods\n──────────────────────────────────────────────────────────────────────────────────\nclass Foo {\n\tfunc abc(a,b,c) {\n\t\treturn 10;\n\t}\n\tlet x = 20;\n}"
expression: parse_expr (& source)
info: test_parser_classes
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "Foo",
            5: "abc",
            6: "a",
            7: "b",
            8: "c",
            9: "x",
        },
        file_id: FileId(Anon),
    } = ClassLit {
        name: Some(
            IdentId(4)[6:9],
        ),
        fields: {
            (
                IdentId(9),
                false,
            ): Field {
                default: Some(
                    Int(20)[56:58],
                ),
                readonly: true,
                name_span: 52:53,
                modifier_span: 48:51,
                private: false,
            }[48:59],
        },
        methods: {
            (
                IdentId(5),
                false,
            ): Method {
                block: [
                    Return(
                        Int(10),
                    )[33:39],
                ][29:46],
                args: [
                    IdentId(6)[22:23],
                    IdentId(7)[24:25],
                    IdentId(8)[26:27],
                ],
                name_span: 18:21,
                modifier_span: 13:17,
                private: false,
            }[13:51],
        },
    }[10:61],
)
