src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__Class literal with private methods.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: Class literal with private methods\n──────────────────────────────────────────────────────────────────────────────────\nclass Foo {\n\tpriv func abc(a,b,c) {\n\t\treturn 10;\n\t}\n\tlet x = 20;\n}"
expression: parse_expr (& source)
info: test_parser_classes
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "Foo",
            5: "abc",
            6: "a",
            7: "b",
            8: "c",
            9: "x",
        },
        file_id: FileId(Anon),
    } = ClassLit {
        name: Some(
            IdentId(4)[6:9],
        ),
        fields: {
            (
                IdentId(9),
                false,
            ): Field {
                default: Some(
                    Int(20)[61:63],
                ),
                readonly: true,
                name_span: 57:58,
                modifier_span: 53:56,
                private: false,
            }[53:64],
        },
        methods: {
            (
                IdentId(5),
                false,
            ): Method {
                block: [
                    Return(
                        Int(10),
                    )[38:44],
                ][34:51],
                args: [
                    IdentId(6)[27:28],
                    IdentId(7)[29:30],
                    IdentId(8)[31:32],
                ],
                name_span: 23:26,
                modifier_span: 13:17,
                private: true,
            }[13:56],
        },
    }[10:66],
)
